<resources>
    <string name="app_name">ReferApplication</string>

    <string name="welcome_1">Recommend a friend of a business or service provider that you are satisfied with</string>
    <string name="welcome_2">I am sending you to a businessThe member\'s details as a potential customer interested in the service or product</string>
    <string name="welcome_3">Receives payment from the business or the service provider for a recommendation after completing the transaction with the customer</string>
    <string name="user_type_head">Hi nice to meet you.
        Choose how you
        connect to the app</string>
    <string name="recommend">Recommend</string>

    <string name="business">Business Owner</string>
    <string name="skip">Skip</string>
    <string name="welcome_back">Welcome back ( ;</string>
    <string name="to_connect">to Connect</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="continued">Continued</string>
    <string name="send">Send</string>
    <string name="already_account">Do you have an account?</string>
    <string name="enter_phone_forgot">Enter a phone number to receive a password reset code</string>
    <string name="enter_otp">Enter the code you received for the number</string>
    <string name="send_again">Send Again</string>
    <string name="refer_message">Want to send you important updates and messages in order to provide you with the best opportunities to earn money for your referrals</string>
    <string name="which">which</string>
    <string name="agreement_near_0001">Agreement near 0001</string>
    <string name="term_of_use">Regulations and terms of use</string>
    <string name="term_use_detail">Ricana Stom, Your Freak Will Scream For Ratty.
Lorem Ipsum Pain Sit Emmett, Consector Adepicing Alit. Seth almankom is not prophesied. The iacollis are about diameter. Vestibulum and Pain, Crass Agate Lactus Val Aogo and Vestibulum Solisi Tidum in Alik. Nolum Arvus Sapien - Almost Fossil, Almost Aquasman in Mr. Nolum Arvus Sapien Modoff. Oedipu Blastic is blown clear, in Neft Neft Lamson Blark - and Anaf Golar Montferrer Sobert Loram that the dough will run, Lachnotz in arre Gek Litz, and that their hearts will be solved. Bright and shrill shrill drifted, with flexible elements. Do you worship and take refuge in us, and you will receive the name - to you Morgam Borak? To tag Ishbes. Aiacollis volupta Diam. Vestibulum and Pain, Crass Agate Lactus Val Aogo and Vestibulum Solisi Tidum in Alik. Nolum Arvus Sapien - Almost Fossil, Almost Aquasman in Mr. Nolum Arvus Sapien Modoff. Odifo Blastic Munofets Kleer, in Nefkat Lamson Belark district - and Anof Goler Montferrer S</string>
    <string name="contract_msg">Lorem Ipsum Dolor Sit Emmett, Konsektorer Edificing Alit Musan Manath. To be honest, you are the one who is married to me. Golar Montferrer Sobert Lorem Shabz Yahol, Lachnutz Birarir Gak Litz, the tie that sits on the couch that is tailor-made - three and a half-length, and a chait novas arashshef. Zota menk habitz apah dalmat dry, kahana nitsahu nimergi shakhim tok, the dash shanra hitidam kheir kek.

Lorem Ipsum Dolor Sit Emet, Tshesh Blia, Mansuto Tzmelh Labiko Nenbi, Tsmuku Blokria Shitsma Boruk. Corus Condimentum in Lycra, Nunsty Clover in Recana Stum, Perikach Tetsrik Lerti.

Lorem Ipsum Dolor Sit Emmett, Consector Adepicing Alit. Seth almankom nisi non prophesied. Des iacollis volupta diam. Vestibulum et dolor, crass agate lactus val aogo and vestibulum solisi tidum in Alik. Nolum Arvus Sapien - Fossilis Quasi, Aquasman Quasi in Mr. Modoff. Oedipu Blastic is blown clear, in Neft Neft Lamson Blark - and Anaf Golar Montferrer Sobert Loram that the dough will run, Lachnotz in arre Gek Litz, and that their hearts will be solved. Bright and shrill shrill drifted, with flexible elements. Do you worship and take refuge in us, and you will receive the name - to you Morgam Borak? To tag Ishbes. Aiacollis volupta Diam. Vestibulum et dolor, crass agate lactus val aogo and vestibulum solisi tidum in Alik. Nolum Arvus Sapien - Fossilis Quasi, Aquasman Quasi in Mr. Modoff. Odifo Blastic Munofets Kleer, in Nefkat Lamson Belark district - and Anof Goler Montferrer S</string>

</resources>