<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginmodule.UserTypeActivity">


    <RelativeLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center"
            android:rotation="360"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/next_arrow" />

        <ImageView
            android:layout_width="@dimen/dp_200"

            android:layout_height="@dimen/dp_140"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_20"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"

        android:lineSpacingExtra="4dp"
        android:text="@string/user_type_head"
        android:textColor="@color/app_main_color"
        android:textSize="@dimen/sp_33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/user_type_back_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/dp_20"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/dp_15"
app:cardElevation="@dimen/dp_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeRecommend"
                android:background="@drawable/choose_account_border"

                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_110">

                <ImageView
                    android:id="@+id/imgRecommn"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/dp_60"
                    android:scaleType="fitXY"
                    android:layout_height="@dimen/dp_60"
                    android:src="@drawable/recommend_user_icon" />


                <TextView
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/recommend"
                    android:layout_marginStart="@dimen/dp_15"
                    android:textSize="@dimen/sp_33"
                    android:layout_toEndOf="@+id/imgRecommn"
                    android:fontFamily="@font/rubik_regular"
                    android:textColor="@color/select_dot_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                </TextView>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/dp_20"
            app:cardElevation="@dimen/dp_4"

            app:cardCornerRadius="@dimen/dp_15"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeBusiness"
                android:background="@drawable/choose_account_border"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_110">


                <ImageView
                    android:id="@+id/imgBusiness"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:src="@drawable/business_owner" />

                <TextView
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/business"
                    android:layout_marginStart="@dimen/dp_15"
                    android:textSize="@dimen/sp_33"
                    android:layout_toEndOf="@+id/imgBusiness"
                    android:fontFamily="@font/rubik_regular"
                    android:textColor="@color/select_dot_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>